fix navigation bubble width and height on mobile

--- a/core/css/header.css
+++ b/core/css/header.css
@@ -37,8 +37,8 @@
 #navigation {
 	top: 45px;
 	bottom: initial;
-	width: 255px;
-	max-height: 90%;
+	width: 265px;
+	max-height: 85%;
 	margin-top: 0;
 	top: 45px;
 	background-color: rgba(36, 40, 47, .97);
